refactor : stream.tolist할 때 개행문자 제거